--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 contourpy==1.3.3
 customtkinter==5.2.2
 cycler==0.12.1
+python-dotenv==1.0.0
 darkdetect==0.8.0
 deep-translator==1.11.4
 docx2txt==0.9
